# code_analyzer_v2

./: LICENSE  README.md  requirements.txt  setup.cfg
CodeReview/ClarityAndMaintainability/: radon_runner.py  refactor_runner.py
CodeReview/CodeQuality/: __init__.py  flake8_runner.py  mypy_runner.py  pylint_runner.py
CodeReview/DependencyManagement/: deptry_runner.py  pip_audit_runner.py  pipreqs_runner.py
CodeReview/Documentation/: darglint_runner.py  docformatter_runner.py  pdoc_runner.py  sphinx_runner.py
CodeReview/FormattingAndStyle/: autopep8_runner.py  black_runner.py  isort_runner.py
CodeReview/NamingConvention/: pep8_naming_runner.py
CodeReview/PerformanceAndEfficiency/: cprofile_runner.py  line_profiler_runner.py  memory_profiler_runner.py  scalene_runner.py
CodeReview/SecurityAndSafety/: bandit_runner.py
CodeReview/SpellingAndGrammar/: pyspellchecker_runner.py
CodeReview/TestingAndTestCoverage/: coverage_runner.py  hypothesis_runner.py  pytest_runner.py
TestProject/: README.md  pyproject.toml
TestProject/src/: example.py
TestProject/src/tests/: test_example.py
code_analyzer/: __init__.py  analyzer.py  cli.py
