[metadata]
name = code_analyzer_v2
version = 1.0.0
author = Ahmad Awsaf uz zaman
author_email = engzaman2020@gmail.com
description = A simple static Python code analysis tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahmad-act/code_analyzer_v2
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.13

[options.entry_points]
console_scripts =
    code-analyzer-v2 = code_analyzer.cli:main